fix: prevent orphan word in hero title via text-wrap pretty

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -31,6 +31,7 @@
 
     &__Title {
         margin-bottom: 1.875rem;
+        text-wrap: pretty;
 
         @include mobile {
             margin-bottom: 1.5rem;
